# OauthProviderTest

./: .env  .gitignore  README.md  main.py  pyproject.toml
google/: authorize.py  router.py
zoho/: authorize.py  router.py
