[project]
name = "provider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.6.5",
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]
